# argschema

./: .appveyor.yml  .dockerignore  .gitignore  Dockerfile  Dockerfile.test  LICENSE  LICENSE.txt  README.md  doc_requirements.txt  json_module.py  nested_example.py  requirements.txt  setup.cfg  setup.py  test_requirements.txt  test_schema.py  tox.ini
.circleci/: circle_dist.sh  circle_master_merge.sh  config.yml  increment_version.py
.github/: github-actions-ci.yml
.github/workflows/: github-actions-ci.yml
argschema/: __init__.py  argschema_parser.py  autodoc.py  deprecated.py  schemas.py  utils.py  validate.py
argschema/fields/: __init__.py  deprecated.py  files.py  image.py  loglevel.py  numpy.py  numpyarrays.py  options.py  slice.py
argschema/pydanticfields/: files.py
argschema/sources/: __init__.py  json_source.py  pika_source.py  source.py  url_source.py  yaml_source.py
docs/: Makefile  conf.py  index.rst
docs/api/: argschema.fields.rst  argschema.rst  modules.rst
docs/user/: intro.rst
examples/: cli_example.py  deprecated_example.py  input.json  multisource_example.json  multisource_example.py  multisource_example.yaml  myinput.json  mymodule.py  nested_example.py  render_module.py  run_template.sh  template_module.py
json_module/: __init__.py  fields.py  json_module.py  loglevel.py  schemas.py  slice.py  utils.py  validator.py
test/: Dockerfile  test_argschema_parser.py  test_autodoc.py  test_cli_overrides.py  test_first_test.py  test_nested_examples.py  test_output.py  test_requirements.txt  test_sources.py  test_utils.py  test_validate.py
(+24 files in other folders)
