[bumpversion]
current_version = 3.0.4

[metadata]
name = argschema
version = 3.0.4
description = "a wrapper for setting up modules that can have parameters specified by command line arguments, json_files, or dictionary objects. Providing a common wrapper for data processing modules."
authors = ['Forrest Collman, David Feng']
author_email = forrestc@alleninstitute.org
url = https://github.com/AllenInstitute/argschema
description_file = README.md

[options]
packages = find:
install_requires = 
	numpy
	marshmallow>=3.0.0,<4.0
	pyyaml
	
[options.extras_require]
pydantic =
	pydantic

[options.extras_require]
TESTING = 
	coverage==4.5.4
	mock>=2.0.0
	pytest>=3.0.7
	pep8>=1.7.0
	pytest-cov>=2.2.1
	pytest-pep8>=1.0.6
	pytest-xdist>=1.14
	pylint>=1.5.4
	flake8>=3.0.4
	rstcheck<4
	sphinx
WINDOWS = 
	pywin32

[tool:pytest]
addopts = --cov=argschema --cov-report html --junitxml=test-reports/test.xml

[aliases]
test = pytest

[flake8]
ignore = E126,E226
max-line-length = 200

[bdist_wheel]
universal = 1
